cmake_minimum_required(VERSION 3.20)
file(GLOB_RECURSE CPP_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE H_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
set(MANIFEST ${CPP_SOURCE} ${H_HEADERS})
add_library(libvkplayground STATIC ${MANIFEST})
set_property(TARGET libvkplayground PROPERTY CXX_STANDARD 17)
target_include_directories(libvkplayground SYSTEM PUBLIC "${PROJECT_SOURCE_DIR}/vendor/glfw/include" "${PROJECT_SOURCE_DIR}/vendor/glm" "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_precompile_headers(libvkplayground PRIVATE "include/libvkplayground_pch.h")
target_link_libraries(libvkplayground PUBLIC vulkan dl pthread X11 Xxf86vm Xrandr Xi glfw spdlog)