cmake_minimum_required(VERSION 3.20)
file(GLOB_RECURSE CPP_SOURCE "*.cpp")
file(GLOB_RECURSE H_HEADERS "*.h")
set(MANIFEST ${CPP_SOURCE} ${H_HEADERS})
add_executable(vkplayground ${MANIFEST})
set_property(TARGET vkplayground PROPERTY CXX_STANDARD 17)
target_link_libraries(vkplayground libvkplayground)
target_precompile_headers(vkplayground PRIVATE "pch.h")